# imageconv

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  m.sh
src/: CMakeLists.txt  fft.cpp  fft.hpp  image.cpp  image.hpp  imageconv.cpp  imageconv.hpp  kernel.cpp  kernel.hpp  main.cpp  methods.cpp  methods.hpp  option_error.hpp  options.cpp  options.hpp
src/tests/: CMakeLists.txt  kernels_test.cc  methods_test.cc
